src/test/ui/const-fn-mismatch.stderr
error[E0379]: trait fns cannot be declared const
  --> $DIR/const-fn-mismatch.rs:23:5
   |
23 |     const fn f() -> u32 { 22 }
   |     ^^^^^ trait fns cannot be const

error: aborting due to previous error

